--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
-    "timeago.js": "^4.0.0-beta.2"
+    "timeago.js": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
